--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.John-WL</groupId>
-    <artifactId>bpm-finder</artifactId>
-    <version>1.0.0-alpha</version>
+    <artifactId>audio</artifactId>
+    <version>1.0.1-alpha</version>
 
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.github.wendykierp/JTransforms -->
+        <dependency>
+            <groupId>com.github.wendykierp</groupId>
+            <artifactId>JTransforms</artifactId>
+            <version>3.1</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.John-WL</groupId>
             <artifactId>miscellaneous-utils</artifactId>
