finished the first iteration of the head banger, bugs might still remain

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>os</artifactId>
             <version>1.0.0-alpha</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
